--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script>
         document.onreadystatechange = function () {
             if(document.readyState == "complete"){
-                $("#loading-cover").fadeOut();
+                $("#loading-cover").slideUp();
             }
         }
     </script>
