--- a/index.html
+++ b/index.html
@@ -35,29 +35,29 @@
     <img src="static/img/logo1.png" alt="logo1" class="logo-loading"  id="logo-l-1" />
     <img src="static/img/logo2.png" alt="logo2" class="logo-loading" id="logo-l-2" />
     <div class="loading-list">
-        <div class="loading loading2" id="left-loading">
-            <div class="wrapper">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-        </div>
+<!--        <div class="loading loading2" id="left-loading">-->
+<!--            <div class="wrapper">-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--            </div>-->
+<!--        </div>-->
         <div class="loading loading4">
             <div class="item">
 
             </div>
         </div>
-        <div class="loading loading2" id="right-loading">
-            <div class="wrapper">
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-                <div class="item"></div>
-            </div>
-        </div>
+<!--        <div class="loading loading2" id="right-loading">-->
+<!--            <div class="wrapper">-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--                <div class="item"></div>-->
+<!--            </div>-->
+<!--        </div>-->
 
     </div>
 </div>
