--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
 <body>
 <!-- loading begin-->
 <div id="loading-cover">
-    <img src="static/img/logo1.png" alt="logo1" class="logo-loading"  style="" id="logo-l-1" />
-    <img src="static/img/logo2.png" alt="logo2" class="logo-loading" id="logo-l-2" />
+    <img src="static/img/logo1.svg" alt="logo1" class="logo-loading"  style="" id="logo-l-1" />
+    <img src="static/img/logo2.svg" alt="logo2" class="logo-loading" id="logo-l-2" />
     <div class="loading-list">
 <!--        <div class="loading loading2" id="left-loading">-->
 <!--            <div class="wrapper">-->
