修复导航栏没法点击的bug

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 
         }
         #logo-l-1{
-            animation: change-gray 3.2s  infinite  0s;
+            animation: change-gray 3.2s  infinite  0.2s;
         }
     </style>
 </head>
@@ -345,8 +345,8 @@
 </nav>
 <!--navigator end -->
 <!--team-name begin-->
-<div class="team-container">
-    <svg viewBox="0 0 1000 300">
+<div class="team-container" >
+    <svg viewBox="0 0 1000 300" style="z-index: -100">
         <symbol id="line-text">
             <text text-anchor="middle" x="50%" y="50%" dy=".4em">
                 BUCT
