--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="static/css/loading.css" type="text/css" rel="stylesheet" />
     <link href="static/css/team_name.css" type="text/css" rel="stylesheet" />
     <link href="static/css/cell.css" type="text/css" rel="stylesheet" />
+    <link href="static/css/home-style.css" type="text/css" rel="stylesheet" />
     <script src="static/js/jquery.js"></script>
     <script>
 
@@ -31,6 +32,7 @@
                     $("#loading-cover").slideUp(700);
 
                      document.getElementById("body-content").style.visibility = "visible";
+                     document.getElementById("triangle-lost-in-space").style.visibility = 'visible';
                      $(".all-body").css({"overflow": "scroll"});
                      $(".team-container").show();
 
@@ -360,12 +362,12 @@
 <style>
     canvas{
         position: relative;
-        width: 100% !important;
-        height: 100% !important;
+        width: 110% !important;
+        height: 120% !important;
         z-index: -999;
     }
 </style>
-<canvas id="triangle-lost-in-space" resize="false"></canvas>
+<canvas id="triangle-lost-in-space" style="visibility: hidden" resize="false"></canvas>
 <!-- background-stars end -->
 <div id="body-content" style="visibility: hidden" >
 <div class="team-container" >
@@ -384,7 +386,7 @@
         <use xlink:href="#line-text" class="text"></use>
     </svg>
     <div class="cell-wrapper">
-    <div class="covid-wrapper" style="z-index: -100">
+    <div class="covid-wrapper" style="z-index: -80">
         <div class="viruses">
             <div class="virus"></div>
             <div class="virus"></div>
@@ -433,10 +435,25 @@
         </div>
     </div>
     <div class="covid-pulse" style="z-index: -100">
+        <div class="covid-sticks" >
+            <div class="covid-stick" ></div>
+            <div class="covid-stick" ></div>
+            <div class="covid-stick"></div>
+            <div class="covid-stick"></div>
+            <div class="covid-stick"></div>
+            <div class="covid-stick"></div>
+            <div class="covid-stick"></div>
+            <div class="covid-stick"></div>
+            <div class="covid-stick"></div>
+            <div class="covid-stick"></div>
+            <div class="covid-stick"></div>
+            <div class="covid-stick"></div>
+            <div class="covid-stick"></div>
+        </div>
     </div>
     </div>
-        <div class="g-cell-wrapper">
-    <div class="g-covid-wrapper" style="z-index: -100">
+    <div class="g-cell-wrapper">
+    <div class="g-covid-wrapper" style="z-index: -80">
         <div class="g-viruses">
             <div class="g-virus"></div>
             <div class="g-virus"></div>
@@ -483,6 +500,77 @@
 
 </div>
 <!--team-name end-->
+    <div class="divide-line"></div>
+    <div class="wiki-slide" style="margin-top: 120px">
+        <img src="static/img/cell1.png" alt="left-cell" class="slide-img" style="width: 400px" />
+        <div class="slide-text">
+            <p class="slide-title text-left" >Phase separation system</p>
+            <p class="slide-content-text text-left" >We constructed the first artificial phase separation system ever in prokaryotes. These droplets in E.coli exhibit similar spherical shape and high fluidity as they were in eukaryotes. By creating membraneless organelles in a cell, phases could realize the redistribution of various targets, including proteins and small organic molecules.</p>
+
+        </div>
+    </div>
+    <div class="wiki-slide" style="direction: rtl">
+        <img src="static/img/cell2.png" alt="right-cell" class="slide-img"  />
+        <div class="slide-text">
+            <p class="slide-title text-left" style="background-image: linear-gradient(to right, #fbc7d4, #9796f0);">Photo-activated switch</p>
+            <p class="slide-content-text text-left" style="border-color: #ab72e8" >We use laser as a switch to control our system in a high spatial-temporal resolution. Within a few seconds, target proteins would redistribute into existing phases. After incubated in dark for several minutes, targets can reverse to previous smear state.</p>
+
+        </div>
+    </div>
+    <div class="wiki-slide"style="margin-top:-80px" >
+            <img src="static/img/cell3.png" alt="right-cell" class="slide-img"  style="width: 400px"  />
+            <div class="slide-text">
+                <p class="slide-title text-left" style="background-image: linear-gradient(to right, #ffafbd,#ffc3a0);">Modelling our system</p>
+                <p class="slide-content-text text-left" style="border-color: #e0ad7b" >
+                    We modelled the phase separation system and coupled enzymatic reactions using a differential equation model and a collision model of chemical reactions. The model conceptually explained how phase separation would regulate downstream reactions, and provided insights for enzyme concentration and phase separation system selection. In addition, an interactive interface based on the model is presented on our wiki.
+
+                </p>
+
+            </div>
+        </div>
+    <div class="wiki-slide" style="direction: rtl">
+        <img src="static/img/cell4.png" alt="right-cell" class="slide-img"  style="width: 400px" />
+        <div class="slide-text">
+            <p class="slide-title text-left" style="background-image: linear-gradient(to right, #ffe259,#ffa751);">Downstream reactions</p>
+            <p class="slide-content-text text-left" style="border-color:#ffa751" >Enzymes of proper size could be recruited into phases by using photo-activated switch. Selecting substrates of proper solubility according to our model, we realized the regulation of enzymatic reactions.
+            </p>
+        </div>
+    </div>
+    <div class="wiki-slide" style="margin-top:-80px" >
+        <img src="static/img/cell5.png" alt="right-cell" class="slide-img"  style="width: 400px"  />
+        <div class="slide-text">
+            <p class="slide-title text-left" style="background-image: linear-gradient(to right, #f8ffae,#43c6ac);">Improvement</p>
+            <p class="slide-content-text text-left" style="border-color: #8dbd5c" >
+                Enrichment of CRY2 in phase include both homo-aggregation of itself and hetero-aggregation of CRY2 and CIB1. By introducing point mutation to C terminal of CRY2, we attenuate homo-aggregation of CRY2 in dark, increasing the threshold of light induction. This improvement may also be helpful for teams who want to modify the sensitivity of their light-controlled information-processing system.
+            </p>
+
+        </div>
+    </div>
+    <div class="wiki-slide" style="direction: rtl">
+        <img src="static/img/cell6.png" alt="right-cell" class="slide-img" style="width: 400px"  />
+        <div class="slide-text">
+            <p class="slide-title text-left" style="background-image: linear-gradient(to right, #a8ff78,#78ffd6);">More possibilities</p>
+            <p class="slide-content-text text-left" style="border-color:#90e263" >Upon introducing this powerful tool in E.coli, there are much more prosperous applications waiting to be developed. We propose that by isolating specific material in phase, a uniform E.coli colony could grow into a society with cell differentiation.</p>
+        </div>
+    </div>
+    <div class="wiki-slide" style="margin-top:-80px">
+        <img src="static/img/cell7.png" alt="right-cell" class="slide-img"  style="width: 400px"   />
+        <div class="slide-text">
+            <p class="slide-title text-left" style="background-image: linear-gradient(to right,#74ebd5,#acb6e5);">Hardware</p>
+            <p class="slide-content-text text-left" style="border-color: #acb6e5" >
+                Depending on the manner of reversible amplification in phase, specific proteins can be used to create a biological register. Responding to laser stimulation, the distribution of fluorescence proteins would change, resulting in the variation in FRET signal, which can be detected by fluorescence reader.
+            </p>
+
+        </div>
+    </div>
+    <footer>
+        <div class="logos" >
+            <img src="static/img/buct-logo3.png" alt="buct-logo" class="f-logo buct-logo"/>
+            <img src="static/img/igem.png" alt="igem-logo" class="f-logo igem-logo"/>
+            <img src="static/img/logo1.png" alt="igem-logo" class="f-logo team-logo"/>
+        </div>
+        <p class="copyright">Copyright ©  2020  BUCT  All rights reserved.</p>
+    </footer>
 </div>
 
 </body>
