--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@
 </div>
 <!--team-name end-->
     <div class="divide-line"></div>
+    <!--主页内容-->
     <div class="wiki-slide" style="margin-top: 120px">
         <img src="static/img/cell1.png" alt="left-cell" class="slide-img" style="width: 400px" />
         <div class="slide-text">
@@ -563,6 +564,8 @@
 
         </div>
     </div>
+    <!--主页内容结束-->
+    <!--脚注-->
     <footer>
         <div class="logos" >
             <img src="static/img/buct-logo3.png" alt="buct-logo" class="f-logo buct-logo"/>
@@ -571,6 +574,7 @@
         </div>
         <p class="copyright">Copyright ©  2020  BUCT  All rights reserved.</p>
     </footer>
+    <!--脚注结束-->
 </div>
 
 </body>
