--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <link href="static/css/team_name.css" type="text/css" rel="stylesheet" />
     <link href="static/css/cell.css" type="text/css" rel="stylesheet" />
     <link href="static/css/home-style.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="static/css/stars.css">
     <script src="static/js/jquery.js"></script>
+    <script src='static/js/gsap.min.js'></script>
+    <script src="static/js/bg_stars.js"></script>
     <script>
 
         // setInterval(function () {
@@ -32,7 +35,6 @@
                     $("#loading-cover").slideUp(700);
 
                      document.getElementById("body-content").style.visibility = "visible";
-                     document.getElementById("triangle-lost-in-space").style.visibility = 'visible';
                      $(".all-body").css({"overflow": "scroll"});
                      $(".team-container").show();
 
@@ -278,7 +280,6 @@
             animation: change-gray 3.2s  infinite  0.2s;
         }
     </style>
-    <script src="static/js/paper-full.min.js"></script>
 </head>
 <body class="all-body" style="overflow: hidden">
 <!-- loading begin-->
@@ -356,18 +357,51 @@
 <!--navigator end -->
 <!--team-name begin-->
 <!-- background-stars -->
-<script type="text/javascript" src="static/js/fly.js">
 
-</script>
-<style>
-    canvas{
-        position: relative;
-        width: 110% !important;
-        height: 120% !important;
-        z-index: -999;
-    }
-</style>
-<canvas id="triangle-lost-in-space" style="visibility: hidden" resize="false"></canvas>
+<div class="bg-star-container"><canvas id="bubbles-canvas"></canvas>
+    <svg class="jellyfish"   xmlns="http://www.w3.org/2000/svg" viewBox="0 0 278.8 291.7">
+    <defs>
+        <style>
+            .cls-1 {
+                fill: #b2d1dc
+            }
+
+            .cls-2 {
+                fill: rgba(165, 191, 193, 0.5)
+            }
+
+            .cls-3 {
+                fill: #d5a2a2
+            }
+
+            .cls-4 {
+                fill: rgba(148, 199, 204, 0.8)
+            }
+
+            .cls-5 {
+                fill: rgba(147, 203, 223, 0.5)
+            }
+
+            .cls-6 {
+                fill: #93b8c4
+            }
+
+            .cls-7 {
+                fill: #c9ecf8
+            }
+
+            .cls-8 {
+                fill: #dbf2f9
+            }
+
+            .cls-9 {
+                fill: #eea4a4
+            }
+        </style>
+    </defs>
+
+</svg></div><!-- partial -->
+
 <!-- background-stars end -->
 <div id="body-content" style="visibility: hidden" >
 <div class="team-container" >
@@ -569,7 +603,7 @@
     <footer>
         <div class="logos" >
             <img src="static/img/buct-logo3.png" alt="buct-logo" class="f-logo buct-logo"/>
-            <img src="static/img/igem.png" alt="igem-logo" class="f-logo igem-logo"/>
+            <img src="static/img/igem2.png" alt="igem-logo" class="f-logo igem-logo"/>
             <img src="static/img/logo1.png" alt="igem-logo" class="f-logo team-logo"/>
         </div>
         <p class="copyright">Copyright ©  2020  BUCT  All rights reserved.</p>
