增加封面病毒图标，修改页脚

--- a/index.html
+++ b/index.html
@@ -420,6 +420,8 @@
         <use xlink:href="#line-text" class="text"></use>
     </svg>
     <div class="cell-wrapper">
+
+    <img class="big-virus"  src="static/img/virus.png"  />
     <div class="covid-wrapper" style="z-index: -80">
         <div class="viruses">
             <div class="virus"></div>
@@ -487,6 +489,7 @@
     </div>
     </div>
     <div class="g-cell-wrapper">
+        <img class="big-virus2"  src="static/img/virus2.png"  />
     <div class="g-covid-wrapper" style="z-index: -80">
         <div class="g-viruses">
             <div class="g-virus"></div>
