美化脚注样式，新增Members页面

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 <nav>
     <div class="nav-wrapper">
     <ul id="topbar">
-        <li class="main-menu"><a class="main-menu-btn" href="#">Home</a> </li>
+        <li class="main-menu"><a class="main-menu-btn" href="index.html">Home</a> </li>
         <li class="main-menu">
             <a class="main-menu-btn" href="#">Project <i class="fa fa-caret-down" style="font-size:24px"></i></a>
             <ol class="submenu">
@@ -338,7 +338,7 @@
         <li class="main-menu"><a class="main-menu-btn" href="#">Human&nbsp;Practices</a> </li>
         <li class="main-menu"><a class="main-menu-btn" href="#">Team<i class="fa fa-caret-down" style="font-size:24px"></i></a>
             <ol class="submenu">
-                <li><a href="#">Member</a></li>
+                <li><a href="team_members.html">Member</a></li>
                 <li><a href="#">Lab&School</a></li>
                 <li><a href="#">Collabrations</a></li>
             </ol>
@@ -602,13 +602,37 @@
         </div>
     </div>
     <!--主页内容结束-->
+
     <!--脚注-->
     <footer>
-        <div class="logos" >
-            <img src="static/img/buct-logo3.png" alt="buct-logo" class="f-logo buct-logo"/>
-            <img src="static/img/igem2.png" alt="igem-logo" class="f-logo igem-logo"/>
-            <img src="static/img/logo1.png" alt="igem-logo" class="f-logo team-logo"/>
+    <div class="container">
+        <div class="box">
+            <a class="img" href="#">
+                <img src="static/img/igem2.png" alt="igem_logo" />
+
+            </a>
+            <p>IGEM</p>
         </div>
+        <div class="box">
+            <a class="img" href="#">
+                <img src="static/img/logo1.png" alt="team_logo" />
+
+            </a>
+            <p>TEAM</p>
+        </div><div class="box">
+        <a class="img" href="#">
+            <img src="static/img/buct-logo2.png" alt="buct_logo" />
+
+        </a>
+        <p>BUCT</p>
+    </div><div class="box" style="margin-left: -30px">
+        <a class="img" href="#">
+            <img src="static/img/zhihu.png" alt="zhihu_logo" />
+
+        </a>
+        <p>ZhiHu</p>
+    </div>
+    </div>
         <p class="copyright">Copyright ©  2020  BUCT  All rights reserved.</p>
     </footer>
     <!--脚注结束-->
