--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>BUCT_IGEM</title>
+    <!-- 最新版本的 Bootstrap 核心 文件 -->
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">-->
+<!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
+
+    <!--引入css文件-->
+    <link href="https://www.bootcss.com/p/buttons/css/buttons.css" type="text/css" rel="stylesheet"/>
     <link href="static/css/bar.css" type="text/css" rel="stylesheet" />
     <link href="static/font-awesome/css/font-awesome.css" type="text/css" rel="stylesheet">
     <link href="static/css/loading.css" type="text/css" rel="stylesheet" />
@@ -10,6 +16,9 @@
     <link href="static/css/cell.css" type="text/css" rel="stylesheet" />
     <link href="static/css/home-style.css" type="text/css" rel="stylesheet" />
     <link rel="stylesheet" href="static/css/stars.css">
+    <link rel="stylesheet" href="static/css/wave.css">
+    <!-- JS 文件-->
+    <script src="static/js/scroll.js"></script>
     <script src="static/js/jquery.js"></script>
     <script src='static/js/gsap.min.js'></script>
     <script src="static/js/bg_stars.js"></script>
@@ -537,7 +546,55 @@
 
 </div>
 <!--team-name end-->
-    <div class="divide-line"></div>
+    <div class="wave-box">
+        <svg viewBox="0 0 120 28">
+            <defs>
+                <filter id="goo">
+                    <feGaussianBlur in="SourceGraphic" stdDeviation="1" result="blur" />
+                    <feColorMatrix in="blur" mode="matrix" values="
+           1 0 0 0 0
+           0 1 0 0 0
+           0 0 1 0 0
+           0 0 0 13 -9" result="goo" />
+                    <xfeBlend in="SourceGraphic" in2="goo" />
+                </filter>
+                <path id="wave" d="M 0,10 C 30,10 30,15 60,15 90,15 90,10 120,10 150,10 150,15 180,15 210,15 210,10 240,10 v 28 h -240 z" />
+            </defs>
+
+            <use id="wave3" class="wave" xlink:href="#wave" x="0" y="-2" ></use>
+            <use id="wave2" class="wave" xlink:href="#wave" x="0" y="0" ></use>
+
+
+            <g class="gooeff" filter="url(#goo)">
+                <circle class="drop drop1" cx="20" cy="2" r="8.8"  />
+                <circle class="drop drop2" cx="25" cy="2.5" r="7.5"  />
+                <circle class="drop drop3" cx="16" cy="2.8" r="9.2"  />
+                <circle class="drop drop4" cx="18" cy="2" r="8.8"  />
+                <circle class="drop drop5" cx="22" cy="2.5" r="7.5"  />
+                <circle class="drop drop6" cx="26" cy="2.8" r="9.2"  />
+                <circle class="drop drop1" cx="5" cy="4.4" r="8.8"  />
+                <circle class="drop drop2" cx="5" cy="4.1" r="7.5"  />
+                <circle class="drop drop3" cx="8" cy="3.8" r="9.2"  />
+                <circle class="drop drop4" cx="3" cy="4.4" r="8.8"  />
+                <circle class="drop drop5" cx="7" cy="4.1" r="7.5"  />
+                <circle class="drop drop6" cx="10" cy="4.3" r="9.2"  />
+
+                <circle class="drop drop1" cx="1.2" cy="5.4" r="8.8"  />
+                <circle class="drop drop2" cx="5.2" cy="5.1" r="7.5"  />
+                <circle class="drop drop3" cx="10.2" cy="5.3" r="9.2"  />
+                <circle class="drop drop4" cx="3.2" cy="5.4" r="8.8"  />
+                <circle class="drop drop5" cx="14.2" cy="5.1" r="7.5"  />
+                <circle class="drop drop6" cx="17.2" cy="4.8" r="9.2"  />
+                <use id="wave1" class="wave" xlink:href="#wave" x="0" y="1" />
+            </g>
+            <!-- g mask="url(#xxx)">
+            <path   id="wave1"  class="wave" d="M 0,10 C 30,10 30,15 60,15 90,15 90,10 120,10 150,10 150,15 180,15 210,15 210,10 240,10 v 28 h -240 z" />
+            </g>
+          </g -->
+
+        </svg>
+    </div>
+    <div class="wave-bottom"></div>
     <!--主页内容-->
     <div class="wiki-slide" style="margin-top: 120px">
         <img src="static/img/cell1.png" alt="left-cell" class="slide-img" style="width: 400px" />
@@ -601,6 +658,7 @@
 
         </div>
     </div>
+    <button id="topButton" class="button button-glow button-circle button-action button-jumbo" onclick="scrollControl(0)"><i class="fa fa-angle-up"></i></button>
     <!--主页内容结束-->
 
     <!--脚注-->
