--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
     <link href="static/css/team_name.css" type="text/css" rel="stylesheet" />
     <link href="static/css/cell.css" type="text/css" rel="stylesheet" />
     <link href="static/css/home-style.css" type="text/css" rel="stylesheet" />
-    <link rel="stylesheet" href="static/css/stars.css">
-    <link rel="stylesheet" href="static/css/wave.css">
+    <link rel="stylesheet" href="static/css/stars.css"/>
+    <link rel="stylesheet" href="static/css/wave.css"/>
+    <link rel="stylesheet" href="static/css/footer.css"/>
     <!-- JS 文件-->
     <script src="static/js/scroll.js"></script>
     <script src="static/js/jquery.js"></script>
     <script src='static/js/gsap.min.js'></script>
     <script src="static/js/bg_stars.js"></script>
+
     <script>
 
         // setInterval(function () {
@@ -51,6 +53,7 @@
             }
         }
     </script>
+    <!-- 预加载CSS代码-->
     <style type="text/css">
         #loading-cover{
             position: absolute;
@@ -546,7 +549,7 @@
 
 </div>
 <!--team-name end-->
-    <div class="wave-box">
+    <div class="wave-box" >
         <svg viewBox="0 0 120 28">
             <defs>
                 <filter id="goo">
