--- a/team_members.html
+++ b/team_members.html
@@ -10,6 +10,7 @@
     <link href="static/css/home-style.css" type="text/css" rel="stylesheet" />
     <link href="static/css/members.css" type="text/css" rel="stylesheet" />
     <link href="static/css/card_component.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="static/css/footer.css"/>
     <script src="static/js/jquery.js"></script>
     <script src="static/js/scroll.js"></script>
     <script src='static/js/gsap.min.js'></script>
